--- a/resources/css/front.css
+++ b/resources/css/front.css
@@ -1130,6 +1130,26 @@ header.header-index {
     0% { opacity: 0 }
     100% { opacity: 1 }
 }
+.quiz-form-inner {
+    width: 400px;
+    margin: 0 auto;
+    text-align: center;
+}
+.quiz-form-inner .form-control {
+    height: 70px;
+    width: 100%;
+    font-size: 16px;
+    border: 2px solid #eee;
+    margin: 0;
+    text-align: center;
+}
+@media (min-width: 992px) {
+	.quiz-form-inner .form-control {
+        height: 70px;
+        margin: 0 15px;
+        font-size: 24px;
+	}
+}
 /* QUIZ */
 
 
